src/test/resources/cocos/valid/scopes/starImport/Import Vehicle.sysml
package 'Import Vehicle'{
  private import 'Symbol Definition'::*;
  block AlreadyInScope;
}