src/test/resources/cocos/invalid/imports/ImportAliasNecessary/Import Vehicle.sysml
package 'Import Vehicle'{
  import 'Symbol Definition'::AlreadyInScope;
  block AlreadyInScope;
}